@@ -397,6 +397,10 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath=".\CHANGELOG.txt"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
